--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zigzagame.evertale">Evertale</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.eapublishing.dhsw.paid">Shadow Hunter: Offline Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gcenter.Defenselegend4.HD.TowerDefense.TD">Defense legend 4 HD: Sci-fi TD</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gcenter.KingofDefense2.towerdefense.TD.premium">King of Defense 2: TD Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
