--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -27,6 +27,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.undeadslayer.afour.epl.gp">Undead Slayer: Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.console.tank">Console Tank - 8Bit TV FC Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.planets.ark.r">Our Planets Ark - ShipBuilding</a></div>
     </div>
 <footer>
