--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -23,11 +23,13 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.blacksmithvip">Warriors' Market Mayhem VIP :</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.catlab.cookglobalvip">Cooking Quest VIP : Food Wagon</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gcenter.kingofdefense.merge.tower.td">King of Defense Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za2p">Zombie Age 2 Premium: Shooter</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.undeadslayer.afour.epl.gp">Undead Slayer: Premium</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.console.tank">Console Tank - 8Bit TV FC Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.planets.ark.r">Our Planets Ark - ShipBuilding</a></div>
     </div>
 <footer>
