--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gcenter.Defenselegend4.HD.TowerDefense.TD">Defense legend 4 HD: Sci-fi TD</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Gcenter.KingofDefense2.towerdefense.TD.premium">King of Defense 2: TD Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.IQPuzzlesGames.CrosswordQuestPremiumGames">Crossword Quest Premium</a></div>
@@ -30,7 +31,6 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush.wonders">Word Game Wonders: Crossword</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.undeadslayer.afour.epl.gp">Undead Slayer: Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.planets.ark.r">Our Planets Ark - ShipBuilding</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.ninja.stickman.legends.shadow.wars">Stickman Legends Offline Games</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
