--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-rogue-tactics-gog/dp/amzn1.pg.item.2673dc48-c033-48f9-9deb-7f305fe02aa7?g=s&ingress=amzn&ref_=SM_GunslugsRogueTactics_S01_FGWP_CRWN">Gunslugs: Rogue Tactics</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/brigador-up-armored-deluxe-gog/dp/amzn1.pg.item.c32506fc-7028-4194-8cd6-624a77ac20aa?g=s&ingress=amzn&ref_=SM_BrigadorUpArmoredDeluxe_S01_FGWP_CRWN">Brigador: Up-Armored Deluxe</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/deathkeep-gog/dp/amzn1.pg.item.11c6b282-d63a-43da-957b-4d329c15f9aa?g=s&ingress=amzn&ref_=SM_DeathKeep_S01_FGWP_CRWN">DeathKeep</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-vi-epic/dp/amzn1.pg.item.6b4d0ed8-afb2-4473-b9ef-275e6267eb38?g=s&ingress=amzn&ref_=SM_SidMeiersCivilizationVI_S01_FGWP_CRWN">Sid Meier's Civilization VI</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/reflections-of-life-dark-architect-ce-aga/dp/amzn1.pg.item.31f8beb1-a474-4be5-884f-76b8de8777fe?g=s&ingress=amzn&ref_=SM_ReflectionsofLifeDarkArchitectCE_S01_FGWP_CRWN">Reflections of Life: Dark Architect - CE</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/deus-ex-mankind-divided-epic/dp/amzn1.pg.item.1b0307e0-f4a9-435b-bbd2-aa6fa8977c66?g=s&ingress=amzn&ref_=SM_DeusExMankindDivided_S02_FGWP_CRWN">Deus Ex: Mankind Divided</a></div>
