--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -26,6 +26,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gcenter.kingofdefense.merge.tower.td">King of Defense Premium</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.rayark.cytus2">Cytus II</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.jumphigh">[365fun] JumpHigh</a></div>
