--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -18,6 +18,7 @@
     </div>
     <div class="game-container">
         <div class="game-item"><a href="https://store.steampowered.com/app/1456200/Initial_Drift_Online/?snr=1_7_7_2300_150_1">Initial Drift Online</a></div>
+        <div class="game-item"><a href="https://store.steampowered.com/app/1755300/Smart_Factory_Tycoon/?snr=1_7_7_2300_150_1">Smart Factory Tycoon</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
