--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -19,12 +19,14 @@
     <div class="game-container">
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=air.com.littlebigplay.games.premium.spellingrightpro">Spelling Right PRO</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x">Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.slash.arena.pro.online.pvp.games.survivor.io.fighting.battle.royale.competitive">Slash Arena: Battle Royale Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.rayark.cytus2">Cytus II</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smalladventuregame.smallredball">Ball Zocos Adventure Game</a></div>
