--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,7 +17,23 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-rogue-tactics-gog/dp/amzn1.pg.item.2673dc48-c033-48f9-9deb-7f305fe02aa7?g=s&ingress=amzn&ref_=SM_GunslugsRogueTactics_S01_FGWP_CRWN">Gunslugs: Rogue Tactics</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/brigador-up-armored-deluxe-gog/dp/amzn1.pg.item.c32506fc-7028-4194-8cd6-624a77ac20aa?g=s&ingress=amzn&ref_=SM_BrigadorUpArmoredDeluxe_S01_FGWP_CRWN">Brigador: Up-Armored Deluxe</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/deathkeep-gog/dp/amzn1.pg.item.11c6b282-d63a-43da-957b-4d329c15f9aa?g=s&ingress=amzn&ref_=SM_DeathKeep_S01_FGWP_CRWN">DeathKeep</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/sid-meiers-civilization-vi-epic/dp/amzn1.pg.item.6b4d0ed8-afb2-4473-b9ef-275e6267eb38?g=s&ingress=amzn&ref_=SM_SidMeiersCivilizationVI_S01_FGWP_CRWN">Sid Meier's Civilization VI</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/reflections-of-life-dark-architect-ce-aga/dp/amzn1.pg.item.31f8beb1-a474-4be5-884f-76b8de8777fe?g=s&ingress=amzn&ref_=SM_ReflectionsofLifeDarkArchitectCE_S01_FGWP_CRWN">Reflections of Life: Dark Architect - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/deus-ex-mankind-divided-epic/dp/amzn1.pg.item.1b0307e0-f4a9-435b-bbd2-aa6fa8977c66?g=s&ingress=amzn&ref_=SM_DeusExMankindDivided_S02_FGWP_CRWN">Deus Ex: Mankind Divided</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/living-legends-the-crystal-tear-ce-aga/dp/amzn1.pg.item.2ba68f14-f393-4688-98ba-426f2b07a8f0?g=s&ingress=amzn&ref_=SM_LivingLegendsTheCrystalTearCE_S01_FGWP_CRWN">Living Legends: The Crystal Tear - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dreamscaper-epic/dp/amzn1.pg.item.faf72ff9-c6ee-46bc-9832-c0627bd4f4db?g=s&ingress=amzn&ref_=SM_Dreamscaper_S01_FGWP_CRWN">Dreamscaper</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-gog/dp/amzn1.pg.item.448a2032-28d0-4ed0-815e-0b3196318919?g=s&ingress=amzn&ref_=SM_Fallout_S02_FGWP_CRWN">Fallout</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-2-gog/dp/amzn1.pg.item.adeb6f91-fd33-4d7b-b0bc-dd1d7f64aac0?g=s&ingress=amzn&ref_=SM_Fallout2_S02_FGWP_CRWN">Fallout 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/bo-path-of-the-teal-lotus-gog/dp/amzn1.pg.item.467b84c8-afa8-432e-a8e9-c69ead91d153?g=s&ingress=amzn&ref_=SM_BoPathoftheTealLotus_S01_FGWP_CRWN">Bō: Path of the Teal Lotus</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-2-gog/dp/amzn1.pg.item.bef0b168-84d5-4915-ba36-5a99cb3c9a4b?g=s&ingress=amzn&ref_=SM_Gunslugs2_S01_FGWP_CRWN">Gunslugs 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/ashworld-gog/dp/amzn1.pg.item.6f28092d-5884-4aaf-be02-a13f24a43b83?g=s&ingress=amzn&ref_=SM_Ashworld_S01_FGWP_CRWN">Ashworld</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/lego-2k-drive-epic/dp/amzn1.pg.item.748f3b5e-8a5c-49be-abd1-d4f2a7e525f4?g=s&ingress=amzn&ref_=SM_LEGO2KDrive_S01_FGWP_CRWN">LEGO 2K Drive</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-gog/dp/amzn1.pg.item.f7fe7089-eca7-4ebf-9ab2-45fd60f026ac?g=s&ingress=amzn&ref_=SM_Gunslugs_S01_FGWP_CRWN">Gunslugs</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/new-tales-from-the-borderlands-epic/dp/amzn1.pg.item.c7f2c4fd-2f63-4b4e-ab71-922692d001fc?g=s&ingress=amzn&ref_=SM_NewTalesfromtheBorderlands_S01_FGWP_CRWN">New Tales from the Borderlands</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
