--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,8 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/harold-halibut-gog/dp/amzn1.pg.item.69f08f25-e52d-4805-92dd-18cea2d72ce1?g=s&ingress=amzn&ref_=SM_HaroldHalibut_S01_FGWP_CRWN">Harold Halibut</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dd-stronghold-kingdom-simulator-gog/dp/amzn1.pg.item.9abdcbae-017a-4634-a0d0-5352f2ad1c67?g=s&ingress=amzn&ref_=SM_DDStrongholdKingdomSimulator_S01_FGWP_CRWN">D&D Stronghold: Kingdom Simulator</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-rogue-tactics-gog/dp/amzn1.pg.item.2673dc48-c033-48f9-9deb-7f305fe02aa7?g=s&ingress=amzn&ref_=SM_GunslugsRogueTactics_S01_FGWP_CRWN">Gunslugs: Rogue Tactics</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/brigador-up-armored-deluxe-gog/dp/amzn1.pg.item.c32506fc-7028-4194-8cd6-624a77ac20aa?g=s&ingress=amzn&ref_=SM_BrigadorUpArmoredDeluxe_S01_FGWP_CRWN">Brigador: Up-Armored Deluxe</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/deathkeep-gog/dp/amzn1.pg.item.11c6b282-d63a-43da-957b-4d329c15f9aa?g=s&ingress=amzn&ref_=SM_DeathKeep_S01_FGWP_CRWN">DeathKeep</a></div>
