--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -25,6 +25,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.slash.arena.pro.online.pvp.games.survivor.io.fighting.battle.royale.competitive">Slash Arena: Battle Royale Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Soul Evolve: Epic Fantasy Hero</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
     </div>
 <footer>
