--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -20,11 +20,11 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ANOOGAMES.WordscapesWordSearchGame">Word Search Game: Offline</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gemjam.slash.arena.pro.online.pvp.games.survivor.io.fighting.battle.royale.competitive">Slash Arena: Battle Royale Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Soul Evolve: Epic Fantasy Hero</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.stickwars2p">Stick Battle Premium: Legends</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.breakout.r">Break Brick Out</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.twodotslinking.r">Spotlight Linking</a></div>
     </div>
 <footer>
