--- a/game_pages/gog.html
+++ b/game_pages/gog.html
@@ -64,6 +64,7 @@
         <div class="game-item"><a href="https://www.gog.com/en/game/ultima_iv_quest_of_the_avatar">Ultima™ IV: Quest of the Avatar</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/ultima_worlds_of_adventure_2_martian_dreams">Ultima™ Worlds of Adventure 2: Martian Dreams</a></div>
         <div class="game-item"><a href="https://www.gog.com/en/game/worlds_of_ultima_the_savage_empire">Worlds of Ultima™: The Savage Empire</a></div>
+        <div class="game-item"><a href="https://www.gog.com/en/game/heroines_quest_the_herald_of_ragnarok">Heroine's Quest: The Herald of Ragnarok</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
