--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -25,6 +25,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Soul Evolve: Epic Fantasy Hero</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pipln.neon.survivors">Neon Survivors: Cyber Rogue</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.stickwars2p">Stick Battle Premium: Legends</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unknownprojectx.breakout.r">Break Brick Out</a></div>
     </div>
