--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,6 +17,9 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://gaming.amazon.com/technotopia-aga/dp/amzn1.pg.item.a8c36799-e290-4bf6-a594-e21e5ced3a02?g=s&ingress=amzn&ref_=SM_Technotopia_S01_FGWP_CRWN">Technotopia</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/elderborn-gog/dp/amzn1.pg.item.ae624aa2-2ebc-474f-9931-e5137e374b17?g=s&ingress=amzn&ref_=SM_ELDERBORN_S01_FGWP_CRWN">ELDERBORN</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/al-qadim-the-genies-curse-gog/dp/amzn1.pg.item.fd99ecb2-9e65-4ed3-b8b7-66b622b2514f?g=s&ingress=amzn&ref_=SM_AlQadimTheGeniesCurse_S01_FGWP_CRWN">Al-Qadim: The Genie's Curse</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/harold-halibut-gog/dp/amzn1.pg.item.69f08f25-e52d-4805-92dd-18cea2d72ce1?g=s&ingress=amzn&ref_=SM_HaroldHalibut_S01_FGWP_CRWN">Harold Halibut</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/dd-stronghold-kingdom-simulator-gog/dp/amzn1.pg.item.9abdcbae-017a-4634-a0d0-5352f2ad1c67?g=s&ingress=amzn&ref_=SM_DDStrongholdKingdomSimulator_S01_FGWP_CRWN">D&D Stronghold: Kingdom Simulator</a></div>
         <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-rogue-tactics-gog/dp/amzn1.pg.item.2673dc48-c033-48f9-9deb-7f305fe02aa7?g=s&ingress=amzn&ref_=SM_GunslugsRogueTactics_S01_FGWP_CRWN">Gunslugs: Rogue Tactics</a></div>
